changes in workouts

--- a/android-app/NutriAI/app/src/main/res/drawable/ic_sleep.xml
+++ b/android-app/NutriAI/app/src/main/res/drawable/ic_sleep.xml
@@ -6,5 +6,5 @@
     android:tint="?attr/colorOnSurface">
   <path
       android:fillColor="@android:color/white"
-      android:pathData="M12,3c-4.97,0 -9,4.03 -9,9s4.03,9 9,9s9,-4.03 9,-9c0,-0.46 -0.04,-0.92 -0.1,-1.36c-0.98,1.37 -2.58,2.26 -4.4,2.26c-2.98,0 -5.4,-2.42 -5.4,-5.4c0,-1.81 0.89,-3.42 2.26,-4.4C12.92,3.04 12.46,3 12,3L12,3z"/>
+      android:pathData="M12.34,2.02c-2.18,0.1 -4.18,0.96 -5.8,2.35 -1.62,1.39 -2.7,3.24 -3.04,5.27 -0.34,2.03 0.1,4.08 1.23,5.73 1.13,1.65 2.85,2.8 4.77,3.25 1.92,0.45 3.96,0.18 5.73,-0.77 1.77,-0.95 3.15,-2.5 3.89,-4.35 0.74,-1.85 0.8,-3.87 0.17,-5.77 -0.63,-1.9 -1.91,-3.55 -3.55,-4.7 -1.64,-1.15 -3.6,-1.68 -5.6,-1.48zM12,4c4.41,0 8,3.59 8,8s-3.59,8 -8,8 -8,-3.59 -8,-8 3.59,-8 8,-8zM12,6c-3.31,0 -6,2.69 -6,6s2.69,6 6,6 6,-2.69 6,-6 -2.69,-6 -6,-6zM12,8c2.21,0 4,1.79 4,4s-1.79,4 -4,4 -4,-1.79 -4,-4 1.79,-4 4,-4z"/>
 </vector>
