--- a/android-app/NutriAI/app/src/main/res/drawable/background_gradient.xml
+++ b/android-app/NutriAI/app/src/main/res/drawable/background_gradient.xml
@@ -1,8 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<shape xmlns:android="http://schemas.android.com/apk/res/android" android:shape="rectangle">
+<shape xmlns:android="http://schemas.android.com/apk/res/android">
     <gradient
-        android:startColor="@color/background_gradient_start"
-        android:centerColor="@color/background_gradient_center"
-        android:endColor="@color/background_gradient_end"
-        android:angle="270"/>
+        android:startColor="@color/primary_light"
+        android:endColor="@color/background_primary"
+        android:angle="135" />
 </shape>
