--- a/android-app/NutriAI/app/src/main/res/drawable/ic_launcher_background.xml
+++ b/android-app/NutriAI/app/src/main/res/drawable/ic_launcher_background.xml
@@ -4,7 +4,7 @@
     android:height="108dp"
     android:viewportWidth="108"
     android:viewportHeight="108">
-    <path
-        android:fillColor="#2563EB"
-        android:pathData="M0,0h108v108h-108z" />
+  <path
+      android:fillColor="#FF2196F3"
+      android:pathData="M0,0h108v108h-108z"/>
 </vector>
