--- a/android-app/NutriAI/app/src/main/res/drawable/ic_steps.xml
+++ b/android-app/NutriAI/app/src/main/res/drawable/ic_steps.xml
@@ -6,5 +6,5 @@
     android:tint="?attr/colorOnSurface">
   <path
       android:fillColor="@android:color/white"
-      android:pathData="M13.5,5.5c1.1,0 2,-0.9 2,-2s-0.9,-2 -2,-2s-2,0.9 -2,2S12.4,5.5 13.5,5.5zM17.5,10.78c-1.23,-0.37 -2.22,-1.17 -2.8,-2.18l-1,-1.6c-0.41,-0.65 -1.11,-1 -1.84,-1c-0.78,0 -1.59,0.5 -1.78,1.44S7,23 7,23h2.1l1.8,-8l2.1,2v6h2v-7.5l-2.1,-2l0.6,-3c1,1.15 2.41,2.01 4,2.34V23h2V12C19.5,11.5 18.5,11 17.5,10.78z"/>
+      android:pathData="M13.5,5.5c1.1,0 2,-0.9 2,-2s-0.9,-2 -2,-2 -2,0.9 -2,2 0.9,2 2,2zM9.8,8.9L7,23h2.1l1.6,-8 5.4,0c0.49,0 0.9,-0.36 0.98,-0.85L17.1,12h-2.04c-0.48,0 -0.87,0.36 -0.98,0.85L13.4,15h-3.6l1.6,-8H9.8zM16.5,5.5c1.1,0 2,-0.9 2,-2s-0.9,-2 -2,-2 -2,0.9 -2,2 0.9,2 2,2z"/>
 </vector>
